tmp/Movies/templates/service.yaml
---
# Source: Movies/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
spec:
  selector:
    app: movies
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
